# termux-linux

./: .gitignore  CLAUDE.md  Cargo.toml  IFLOW.md  README.md  UrlList.txt  commit_msg.txt  mirror.conf  mirrors.conf  test_extraction.sh  tmp.md  tmp.txt
.iflow/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.iflow/commands/openspec/: apply.md  archive.md  proposal.md
openspec/: project.md
openspec/changes/enhance-installer-experience/: proposal.md  tasks.md
openspec/changes/enhance-system-support-and-ui/: proposal.md  tasks.md
openspec/changes/modernize-architecture-and-ui/: design.md  proposal.md  tasks.md
openspec/changes/modernize-termux-installer/: tasks.md
openspec/specs/cli/: spec.md
openspec/specs/config/: spec.md
openspec/specs/distro/: spec.md
openspec/specs/installer/: spec.md
openspec/specs/ui/: spec.md
src/: cli.rs  config.rs  distro.rs  installer.rs  main.rs  system.rs  ui.rs  utils.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/config/: default_config.rs  defaults.rs  mod.rs  parser.rs  parser_tests.rs  parser_tests_core.rs  parser_tests_init.rs
src/distro/: definitions.rs  meta.rs  meta_serde.rs  mod.rs  name.rs
src/distro/definitions/: adelie.rs  arch.rs  base.rs  (+7 more)
src/i18n/: loader.rs  mod.rs  translator.rs
src/installer/: core.rs  interactive.rs  mod.rs
src/system/: manage.rs  mod.rs  permissions.rs
src/ui/: colors.rs  display.rs  mod.rs  progress.rs  progress_download.rs  progress_extraction.rs
src/utils/: arch.rs  cmd.rs  fs.rs  fs_core.rs  mod.rs  net.rs  net_core.rs  permissions.rs
(+29 files in other folders)
