[package]
name = "termux-linux-install"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust port of TermuxForLinux - Install and run Linux distributions in Termux"

[dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true