[package]
name = "insOs"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust port of TermuxForLinux - Install and run Linux distributions in Termux"

[dependencies]
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true